minijinja/tests/snapshots/test_templates__vm@macro_caller.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% macro render_dialog(title, class='dialog') -%}\n    <div class=\"{{ class }}\">\n        <h2>{{ title }}</h2>\n        <div class=\"contents\">\n            {{ caller() }}\n        </div>\n    </div>\n{%- endmacro %}\n\n{% call render_dialog('Hello World') %}\n    This is a simple dialog rendered by using a macro and\n    a call block.\n{% endcall %}\n\ncaller: {{ render_dialog.caller }}"
info: {}
input_file: minijinja/tests/inputs/macro_caller.txt
---


<div class="dialog">
        <h2>Hello World</h2>
        <div class="contents">
            
    This is a simple dialog rendered by using a macro and
    a call block.

        </div>
    </div>

caller: True

