minijinja/tests/snapshots/test_templates__vm@macro_import.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% from \"include_with_var_and_macro.txt\" import title, helper, missing -%}\nmissing: {{ missing }}\ntitle: {{ title }}\nhelper: {{ helper(\"a\", \"b\") }}"
info:
  c: The C Variable
input_file: minijinja/tests/inputs/macro_import.txt
---
missing: 
title: The Title
helper: ['a', 'b', 'The C Variable']
