minijinja/tests/snapshots/test_templates__vm@macro_include.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{%- include \"example_macro.txt\" %}\n{%- set d = \"should never show up\" %}\n{{ example(1, 2, 3) }}\n{{ example(1, 2) }}"
info: {}
input_file: minijinja/tests/inputs/macro_include.txt
---
[1, 2, 3, 'closure']
[1, 2, 'default', 'closure']
