minijinja/tests/snapshots/test_templates__vm@macro_kwargs.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% macro foo(a, b, c, d) %}{{ [a, b, c, d] }}{% endmacro -%}\n{{ foo(1, 2, 3) }}\n{{ foo({\"blub\": \"blah\"}) }}\n{{ foo(a=1, b=2, c=3) }}\n{{ foo(a=1, b=2, c=3, d=4) }}"
info: {}
input_file: minijinja/tests/inputs/macro_kwargs.txt
---
[1, 2, 3, undefined]
[{'blub': 'blah'}, undefined, undefined, undefined]
[1, 2, 3, undefined]
[1, 2, 3, 4]
