minijinja/tests/snapshots/test_templates__vm@macro_recursive_alias.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{%- macro nest(children) -%}\n    <nest>\n    {%- for child in children -%}\n        <child>{{ nest(child.children) }}</child>\n    {%- endfor -%}\n    </nest>\n{%- endmacro -%}\n{% set not_nest = nest %}\n{% set nest = \"not callable\" %}\n{{ not_nest(top_level) }}"
info:
  top_level:
    - children:
        - children: []
        - children: []
    - children:
        - children: []
input_file: minijinja/tests/inputs/macro_recursive_alias.txt
---


<nest><child><nest><child><nest></nest></child><child><nest></nest></child></nest></child><child><nest><child><nest></nest></child></nest></child></nest>

