minijinja/tests/snapshots/test_templates__vm@map_methods.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/map_methods.txt

---
items: [["a", "b"], ["b", "c"]]
values: ["b", "c"]

